# gmdenoiser

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
source/: gmdenoiser.cpp
